--- a/docs/assignment564/fe564.Rmd
+++ b/docs/assignment564/fe564.Rmd
@@ -272,7 +272,7 @@ Best Subset	      |	  /   | X3,X4,X6,X7,X8,X9 | X1,X2,X5
 all possible      |	  /   | X3,X4,X6,X7,X8,X9 | X1,X2,X5
 
 |    Model  | VIF |   F  |P-value(F)| MSR  | MSE |$R_{adjusted}^2$|$R_{Predict}^2$|P-value(t)| Residuals Plots 
-|-----------|---- |------| ---------| -----| ----| -------------- | ------------- | -------- |---
+|----       |---- |----  | ----     | ---- | ----| ----           | ----          | ----     | ----
 3-4-7       | <10 |70.378|0.0000    |21.188|0.301| 0.878          | 0.854         |Max=0.054 | Good enough
 3-4-6-7-8-9 | <10 |68.16 |0.0000	   |11.265|0.165| 0.933          | 0.908         |Max=0.019 | Good enough
 
@@ -746,26 +746,41 @@ plot(k)
 
 # All Possible Regression for all log model #
 k <- ols_step_all_possible(model_wf_all_log)
-# k
+k
+plot(k)
+
+# All Possible Regression for all log model #
+k <- ols_step_all_possible(model_wf_3g_log_inter)
+k
 plot(k)
 
 # All Possible Regression for X4 eliminated model #
 # k <- ols_step_all_possible(model_wf_rm4_log)
 # k
-plot(k)
+# plot(k)
 
 # All Possible Regression for X1 eliminated model #
 # k <- ols_step_all_possible(model_wf_rm1_log)
 # k
-plot(k)
+# plot(k)
 
 # Stepwise Regression based on p values for full model#
 k <- ols_step_both_p(model_wf_full_log)
-k
-plot(k)
+# k
+# plot(k)
 
 # Stepwise AIC Regression for full model#
 k<- ols_step_both_aic(model_wf_full_log)
+# k
+# plot(k)
+
+# Stepwise Regression based on p values for all log model #
+k <- ols_step_both_p(model_wf_all_log)
+k
+plot(k)
+
+# Stepwise AIC Regression for all log model #
+k <- ols_step_both_aic(model_wf_all_log)
 k
 plot(k)
 
