--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -11,9 +11,15 @@ output: html_document
 
 #### 1. 
 
-For k is an integer,
+For k is an integer, when $k\ge0$
 
-$$\Gamma(\frac{2k+1}2)=\frac{2k-1}2\Gamma(\frac{2k-1}2)=\frac{2k-1}2\frac{2k-3}2\Gamma(\frac{2k-3}2)=...=\prod_{1}^{k}\frac{2k-1}{2}\Gamma(\frac12)=\frac{(2k)!}{2^{2k}k!}\sqrt{\pi}=\frac{(2k-1)!}{2^{2k-1}(k-1)!}\sqrt{\pi}$$
+$$\Gamma(\frac{2k+1}2)=\frac{2k-1}2\Gamma(\frac{2k-1}2)=\frac{2k-1}2\frac{2k-3}2\Gamma(\frac{2k-3}2)=...=\prod_{1}^{k}\frac{2k-1}{2}\Gamma(\frac12)=\frac{(2k)!}{4^{k}k!}\sqrt{\pi}$$
+
+When $k<0$
+
+$$\Gamma(\frac{2k+1}2)=\frac{\Gamma(\frac{2k+3}2)}{\frac{2k+1}2}=\frac{\Gamma(\frac{2k+5}2)}{\frac{2k+1}2\frac{2k+3}2}=...=\frac{\Gamma(\frac{1}2)}{\prod_{k}^{-1}\frac{2k+1}2}=\sqrt{\pi}{\prod_{1}^{-k}\frac{2}{1-2(-k)}}=\frac{(-4)^{-k}(-k)!}{(-2k)!}\sqrt{\pi}$$
+
+$$\therefore \Gamma(\frac{2k+1}2)=\begin{cases}\frac{(2k)!}{4^{k}k!}\sqrt{\pi} & when\quad k\ge0\\\frac{(-4)^{-k}(-k)!}{(-2k)!}\sqrt{\pi} &  when\quad k<0\end{cases}$$
 
 ****
 
